--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<!-- <link href="img/maxwell.logo-heart-blue.png" rel="icon" type="image/png"> -->
 		<link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<link href='libs/jScrollPane/jquery.jscrollpane.css' rel='stylesheet' />
+		<!-- <link href='libs/jScrollPane/jquery.jscrollpane.css' rel='stylesheet' /> -->
 
 		<script src="libs/jquery/jquery-2.1.1.js"></script>
 	</head>
@@ -20,6 +20,7 @@
 	<body>
 		<div ng-view></div>
 
+		<!-- AngularJS Javascript Includes  -->
 		<script src="libs/angular/angular.js"></script>
 		<script src="libs/angular/angular-strap.js"></script>
 		<script src="libs/angular/angular-strap.tpl.js"></script>
@@ -27,24 +28,29 @@
 		<script src="libs/angular/angular-resource.js"></script>
 		<script src="libs/angular/angular-route.js"></script>
 		<script src="libs/angular/angular-cookies.js"></script>
-
-		<script src='libs/ng-infinite-scroll/ng-infinite-scroll.js'></script>
+		<!-- AngularJS END -->
 
 		<script src="js/app.js"></script>
 
+		<!-- Controllers include section -->
+		<script src="js/controllers/homepage.js"></script>
+		<!-- Controllers END -->
+
+		<!-- Controller Examples include section -->
 		<script src="js/controllers/familyDetails.js"></script>
 		<script src="js/controllers/planList.js"></script>
 		<script src="js/controllers/planDetails.js"></script>
 		<script src="js/controllers/planComparison.js"></script>
 		<script src="js/controllers/planApply.js"></script>
 		<script src="js/controllers/planSubsidy.js"></script>
+		<!-- Controllers Examples END -->
 
-		<!-- <script src="js/directives/scroller.js"></script> -->
-
+		<!-- Services Examples Includes -->
 		<script src="js/services/familyDetails.js"></script>
 		<script src="js/services/plans.js"></script>
 		<script src="js/services/planDetails.js"></script>
 		<script src="js/services/planCompare.js"></script>
 		<script src="js/services/planSubsidy.js"></script>
+		<!-- Services Examples END -->
 	</body>
 </html>
