Products about us terms and conditions policy privacy pages

--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,13 @@
 		<!-- Controllers include section -->
 		<script src="js/controllers/homepage.js"></script>
 		<script src="js/controllers/register.js"></script>
+		<script src="js/controllers/products.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
 		<script src="js/services/homepageServ.js"></script>
 		<script src="js/services/register.js"></script>
+		<script src="js/services/products.js"></script>
 		<!-- Services END -->
 
 		<!-- Controller Examples include section -->
