--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
 		<aside class='outer-circular-menu closed'>
 			<section class='inner-circular-menu'>
-				<span class='open-close-menu'> > </span>
+				<span class='open-close-menu glyphicon glyphicon-menu-right'></span>
 			</section>
 			<section class='menu-bubble-wrapper menu-bubble-1 closed'><a href='/products/1' class='menu-bubble'>Products</a></section>
 			<section class='menu-bubble-wrapper menu-bubble-2 closed'><a href='/products/1' class='menu-bubble'>Products</a></section>
