Product page pagination

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,7 @@
 		<script src="js/controllers/register.js"></script>
 		<script src="js/controllers/login.js"></script>
 		<script src="js/controllers/products.js"></script>
+		<script src="js/controllers/product.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
@@ -98,6 +99,7 @@
 		<script src="js/services/register.js"></script>
 		<script src="js/services/login.js"></script>
 		<script src="js/services/products.js"></script>
+		<script src="js/services/product.js"></script>
 		<!-- Services END -->
 
 		<!-- Controller Examples include section -->
