Working on Profile page

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,7 @@
 		<script src="js/controllers/login.js"></script>
 		<script src="js/controllers/products.js"></script>
 		<script src="js/controllers/product.js"></script>
+		<script src="js/controllers/profile.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
@@ -100,6 +101,7 @@
 		<script src="js/services/login.js"></script>
 		<script src="js/services/products.js"></script>
 		<script src="js/services/product.js"></script>
+		<script src="js/services/profile.js"></script>
 		<!-- Services END -->
 
 		<!-- Controller Examples include section -->
