Added resize js, worked on products page front and back end

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
 				<span class='open-close-menu glyphicon glyphicon-menu-right'></span>
 			</section>
 			<section class='menu-bubble-wrapper menu-bubble-1 closed'><a href='/products/1' class='menu-bubble'>Products</a></section>
-			<section class='menu-bubble-wrapper menu-bubble-2 closed'><a href='/products/1' class='menu-bubble'>Products</a></section>
-			<section class='menu-bubble-wrapper menu-bubble-3 closed'><a href='/products/1' class='menu-bubble'>Products</a></section>
+			<section class='menu-bubble-wrapper menu-bubble-2 closed'><a href='/campaings' class='menu-bubble'>Campaign</a></section>
+			<section class='menu-bubble-wrapper menu-bubble-3 closed'><a href='/statistics' class='menu-bubble'>Statistics</a></section>
 		</aside>
 
 		<div ng-view></div>
@@ -104,22 +104,7 @@
 		<script src="js/services/profile.js"></script>
 		<!-- Services END -->
 
-		<!-- Controller Examples include section -->
-		<script src="js/controllers/familyDetails.js"></script>
-		<script src="js/controllers/planList.js"></script>
-		<script src="js/controllers/planDetails.js"></script>
-		<script src="js/controllers/planComparison.js"></script>
-		<script src="js/controllers/planApply.js"></script>
-		<script src="js/controllers/planSubsidy.js"></script>
-		<!-- Controllers Examples END -->
-
-		<!-- Services Examples Includes -->
-		<script src="js/services/familyDetails.js"></script>
-		<script src="js/services/plans.js"></script>
-		<script src="js/services/planDetails.js"></script>
-		<script src="js/services/planCompare.js"></script>
-		<script src="js/services/planSubsidy.js"></script>
-		<!-- Services Examples END -->
-
 	</body>
+
+	<script src="js/main.js"></script>
 </html>
