--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
 		<title>EDeC - Ethic Decisions for Consummers</title>
 
 		<!-- <link href="images/maxwell.logo-heart-blue.png" rel="icon" type="image/png"> -->
-		<link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
-		<!-- <link href='libs/jScrollPane/jquery.jscrollpane.css' rel='stylesheet' /> -->
+		<link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
+		<link href="css/smoothness/jquery-ui-1.9.2.custom.min.css" rel="stylesheet" type='text/css'>
+		<link href="css/styles.css" rel="stylesheet" type='text/css'>
 
-		<script src="libs/jquery/jquery-2.1.1.js"></script>
+		<script src="libs/jquery/jquery-2.1.1.js" type='text/javascript'></script>
+		<script src="libs/jqueryui/jquery-ui-1.9.2.custom.min.js" type='text/javascript'></script>
 	</head>
 
 	<body>
