Went back to mysql

--- a/public/index.html
+++ b/public/index.html
@@ -94,15 +94,17 @@
 		<script src="js/controllers/products.js"></script>
 		<script src="js/controllers/product.js"></script>
 		<script src="js/controllers/profile.js"></script>
+		<script src="js/controllers/comments.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
-		<script src="js/services/homepageServ.js"></script>
+		<script src="js/services/homepage.js"></script>
 		<script src="js/services/register.js"></script>
 		<script src="js/services/login.js"></script>
 		<script src="js/services/products.js"></script>
 		<script src="js/services/product.js"></script>
 		<script src="js/services/profile.js"></script>
+		<script src="js/services/comments.js"></script>
 		<!-- Services END -->
 
 	</body>
