campaigns page added and campaign page added

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,8 @@
 		<script src="js/controllers/product.js"></script>
 		<script src="js/controllers/profile.js"></script>
 		<script src="js/controllers/comments.js"></script>
+		<script src="js/controllers/campaigns.js"></script>
+		<script src="js/controllers/campaign.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
@@ -105,6 +107,8 @@
 		<script src="js/services/product.js"></script>
 		<script src="js/services/profile.js"></script>
 		<script src="js/services/comments.js"></script>
+		<script src="js/services/campaigns.js"></script>
+		<script src="js/services/campaign.js"></script>
 		<!-- Services END -->
 
 	</body>
