Profile Friend added

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
 		<script src="js/controllers/comments.js"></script>
 		<script src="js/controllers/campaigns.js"></script>
 		<script src="js/controllers/campaign.js"></script>
+		<script src="js/controllers/friendProfile.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
@@ -109,6 +110,7 @@
 		<script src="js/services/comments.js"></script>
 		<script src="js/services/campaigns.js"></script>
 		<script src="js/services/campaign.js"></script>
+		<script src="js/services/friendProfile.js"></script>
 		<!-- Services END -->
 
 	</body>
