working on join button

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 				<span class='open-close-menu glyphicon glyphicon-menu-right'></span>
 			</section>
 			<section class='menu-bubble-wrapper menu-bubble-1 closed'><a href='/products/1' class='menu-bubble'>Products</a></section>
-			<section class='menu-bubble-wrapper menu-bubble-2 closed'><a href='/campaings' class='menu-bubble'>Campaign</a></section>
+			<section class='menu-bubble-wrapper menu-bubble-2 closed'><a href='/campaigns/1' class='menu-bubble'>Campaign</a></section>
 			<section class='menu-bubble-wrapper menu-bubble-3 closed'>
 				<a href='' class='menu-bubble menu-bubble-statistics closed'>Statistics</a>
 				<section class='menu-second-bubble-wrapper menu-second-bubble-1 closed'>
@@ -112,6 +112,7 @@
 		<script src="js/controllers/campaignForm.js"></script>
 		<script src="js/controllers/statistics.js"></script>
 		<script src="js/controllers/statistic.js"></script>
+		<script src="js/controllers/joinCampaign.js"></script>
 		<!-- Controllers END -->
 
 		<!-- Services include section -->
@@ -128,6 +129,7 @@
 		<script src="js/services/campaignForm.js"></script>
 		<script src="js/services/statistics.js"></script>
 		<script src="js/services/statistic.js"></script>
+		<script src="js/services/joinCampaign.js"></script>
 		<!-- Services END -->
 
 	</body>
